@@ -1,9 +1,10 @@
 package com.github.scribejava.core.oauth;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.builder.api.OAuth2SignatureType;
 import com.github.scribejava.core.httpclient.HttpClient;
 import com.github.scribejava.core.httpclient.HttpClientConfig;
+import com.github.scribejava.core.oauth2.bearersignature.BearerSignature;
+import com.github.scribejava.core.oauth2.bearersignature.BearerSignatureURIQueryParameter;
 import java.io.OutputStream;
 
 class OAuth20ApiUnit extends DefaultApi20 {
@@ -27,7 +28,7 @@ class OAuth20ApiUnit extends DefaultApi20 {
     }
 
     @Override
-    public OAuth2SignatureType getSignatureType() {
-        return OAuth2SignatureType.BEARER_URI_QUERY_PARAMETER;
+    public BearerSignature getBearerSignature() {
+        return BearerSignatureURIQueryParameter.instance();
     }
 }
